Bug #20104
tell injectargs command error
% Done:
0%
Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
# ceph tell osd.* injectargs "--osd_deep_scrub_interval 2419200" 2017-05-27 19:29:57.262652 7f4dc46b3700 -1 WARNING: the following dangerous and experimental features are enabled: bluestore,rocksdb 2017-05-27 19:29:57.290124 7f4dc46b3700 -1 WARNING: the following dangerous and experimental features are enabled: bluestore,rocksdb osd.0: osd_deep_scrub_interval = '2.4192e+06' (unchangeable) osd.1: osd_deep_scrub_interval = '2.4192e+06' (unchangeable) osd.2: osd_deep_scrub_interval = '2.4192e+06' (unchangeable) osd.3: osd_deep_scrub_interval = '2.4192e+06' (unchangeable) ceph daemon osd.25 config show | grep osd_deep_scrub_interval "osd_deep_scrub_interval": "2.4192e+06",
History
#1 Updated by Kefu Chai over 5 years ago
- Release deleted (
kraken) - Release set to master
#2 Updated by Chang Liu over 5 years ago
#3 Updated by Nathan Cutler over 5 years ago
- Status changed from New to Fix Under Review
#4 Updated by Greg Farnum over 5 years ago
#5 Updated by Sage Weil over 1 year ago
- Status changed from Fix Under Review to Closed