common,config: fix tell injectargs command error

Fixes: http://tracker.ceph.com/issues/20104

Signed-off-by: Yanhu Cao <gmayyyha@gmail.com>